---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: ????
  Changes:
    - Default location setting is now the center of the screen for both play modes
    - Default number of rows is now four, up from three
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2020.02-15
  Bugfixes:
    - Fixed a crash when a translation was canceled after the translation requests had been made, but before they all had been sorted
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2020-02-12
  Features:
    - Added custom logistic request GUI (control + select a logistics item to access it)
  Changes:
    - Significantly optimised search logic
    - Improved GUI navigation. Pressing escape while selecting a result with keyboard shortcuts will return to the search bar. Pressing escape again will close the GUI
  Bugfixes:
    - Fixed that the mod would continue to track your items forever if you canceled a temporary logistics request
    - Fixed more issues with the translation module duplicating keys
    - Fixed a crash if a multiplayer save were to be upgraded from 1.1.0 while other players had the GUI open
    - Fixed some leftover migration issues
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2020-01-28
  Bugfixes:
    - Fixed the "unfixable migration" that prevented a direct upgrade to 1.2
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2020-01-25
  Features:
    - Updated to Factorio 0.18
    - When using keyboard navigation, the selected item's name will be shown in the text box
    - Shift + selecting an item while in the editor will create an infinity inventory filter for that item
  Optimizations: