@@ -14,21 +14,24 @@ qis-search-logistics=Search in logistics network
 qis-search-unavailable=Include unavailable items in search results
 qis-search-hidden=Include hidden items in search results
 qis-fuzzy-search=Use fuzzy search [img=info]
+qis-logistics-unique-only=Logistics results must be unique [img=info]
 qis-default-location=GUI location
 qis-editor-location=GUI location (map editor)
 qis-column-count=Number of columns
 qis-row-count=Number of rows
 
 [mod-setting-description]
+qis-logistics-unique-only=Results from the logistics network must not already be in your inventory.
 qis-fuzzy-search=More lenient matching for search queries.
 
 [qis-message]
+already-requested-item=You already have a logistics request for __1__s
+not-in-cheat-mode=Cheat mode must be enabled to spawn items!
+out-of-request-slots=You are out of request slots!
 rebuilt-localised-dictionary=Rebuilt localised dictionary for __1__
 request-from-logistic-network=Requested __1__ __plural_for_parameter_1_{1=__2__|rest=__2__s}__ from the logistic network
-already-requested-item=You already have a logistics request for __1__s
-translation-not-finished=Cannot open the search GUI: dictionary translation has not yet finished!
 translation-finished=Dictionary translation finished, you may now use the Quick Item Search GUI!
-out-of-request-slots=You are out of request slots!
+translation-not-finished=Cannot open the search GUI: dictionary translation has not yet finished!
 
 [qis-command-help]
 rebuild-localised-dictionaries=- Rebuilds localised dictionaries for all connected players.
