@@ -1,9 +1,14 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: ????
+  Features:
+    - Shift + selecting an unavailable item while in cheat mode will spawn that item into your cursor
+    - Added option to show an item both in the logistics networks and your inventory
   Changes:
+    - Planners and blueprint books will be excluded from the results
     - Default location setting is now the center of the screen for both play modes
     - Default number of rows is now four, up from three
+    - Removed lualib and made it a separate mod, RaiLuaLib
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2020.02-15
